unpackaged/main/default/objects/Account/fields/Dashboard_Access__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Access__c</fullName>
    <formula>IF( $User.Id=CreatedBy.Id || $User.Id=CreatedBy.ManagerId || $User.Id=CreatedBy.Head_Of_ID__c, TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dashboard Access</label>
    <type>Checkbox</type>
</CustomField>